Feature/test-analysis-cui-jwt-validation (#50)
The pull request focuses on improving documentation links, fixing broken source references, correcting class references, and ensuring documentation integrity across security and specification documents. It also adds @EnableGeneratorController annotations to several test classes and removes redundant comments.