@@ -15,7 +15,9 @@
  */
 package de.cuioss.jwt.validation.domain.claim;
 
+import de.cuioss.test.generator.junit.EnableGeneratorController;
 import de.cuioss.test.juli.junit5.EnableTestLogger;
+import de.cuioss.test.valueobjects.junit5.contracts.ShouldHandleObjectContracts;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -28,19 +30,18 @@ import java.util.*;
 import static org.junit.jupiter.api.Assertions.*;
 
 @EnableTestLogger
+@EnableGeneratorController
 @DisplayName("Tests ClaimValue functionality")
-class ClaimValueTest {
+class ClaimValueTest implements ShouldHandleObjectContracts<ClaimValue> {
 
     private static final String TEST_STRING = "test-value";
     private static final OffsetDateTime TEST_DATE = OffsetDateTime.now();
 
     @Test
-    @DisplayName("Should create ClaimValue for plain string")
+    @DisplayName("Create ClaimValue for plain string")
     void shouldCreateForPlainString() {
-        // Given, When
         ClaimValue value = ClaimValue.forPlainString(TEST_STRING);
 
-        // Then
         assertEquals(TEST_STRING, value.getOriginalString());
         assertEquals(ClaimValueType.STRING, value.getType());
         assertTrue(value.getAsList().isEmpty());
@@ -50,16 +51,13 @@ class ClaimValueTest {
     }
 
     @Test
-    @DisplayName("Should create ClaimValue for sorted set")
+    @DisplayName("Create ClaimValue for sorted set")
     void shouldCreateForSortedSet() {
-        // Given
-        SortedSet<String> set = new TreeSet<>(Arrays.asList("value1", "value2", "value3"));
+        SortedSet<String> set = new TreeSet<>(List.of("value1", "value2", "value3"));
         List<String> expectedList = new ArrayList<>(set);
 
-        // When
         ClaimValue value = ClaimValue.forSortedSet(TEST_STRING, set);
 
-        // Then
         assertEquals(TEST_STRING, value.getOriginalString());
         assertEquals(ClaimValueType.STRING_LIST, value.getType());
         assertEquals(expectedList, value.getAsList());
@@ -69,15 +67,12 @@ class ClaimValueTest {
     }
 
     @Test
-    @DisplayName("Should create ClaimValue for list")
+    @DisplayName("Create ClaimValue for list")
     void shouldCreateForList() {
-        // Given
-        List<String> list = Arrays.asList("value1", "value2", "value3");
+        List<String> list = List.of("value1", "value2", "value3");
 
-        // When
         ClaimValue value = ClaimValue.forList(TEST_STRING, list);
 
-        // Then
         assertEquals(TEST_STRING, value.getOriginalString());
         assertEquals(ClaimValueType.STRING_LIST, value.getType());
         assertEquals(list, value.getAsList());
@@ -87,12 +82,10 @@ class ClaimValueTest {
     }
 
     @Test
-    @DisplayName("Should create ClaimValue for date time")
+    @DisplayName("Create ClaimValue for date time")
     void shouldCreateForDateTime() {
-        // Given, When
         ClaimValue value = ClaimValue.forDateTime(TEST_STRING, TEST_DATE);
 
-        // Then
         assertEquals(TEST_STRING, value.getOriginalString());
         assertEquals(ClaimValueType.DATETIME, value.getType());
         assertTrue(value.getAsList().isEmpty());
@@ -104,12 +97,10 @@ class ClaimValueTest {
     @ParameterizedTest
     @NullAndEmptySource
     @ValueSource(strings = {" ", "\t", "\n"})
-    @DisplayName("Should handle null and empty strings")
+    @DisplayName("Handle null and empty strings")
     void shouldHandleNullAndEmptyStrings(String input) {
-        // Given, When
         ClaimValue value = ClaimValue.forPlainString(input);
 
-        // Then
         assertEquals(input, value.getOriginalString());
         if (input == null) {
             assertTrue(value.isEmpty());
@@ -121,9 +112,8 @@ class ClaimValueTest {
     }
 
     @Test
-    @DisplayName("Should create default claim values")
+    @DisplayName("Create default claim values")
     void shouldCreateEmptyClaimValues() {
-        // Given, When, Then
         ClaimValue stringValue = ClaimValue.createEmptyClaimValue(ClaimValueType.STRING);
         assertNull(stringValue.getOriginalString());
         assertEquals(ClaimValueType.STRING, stringValue.getType());
@@ -140,9 +130,8 @@ class ClaimValueTest {
     }
 
     @Test
-    @DisplayName("Should check if value is present for claim value type")
+    @DisplayName("Check if value is present for claim value type")
     void shouldCheckIfValueIsPresentForClaimValueType() {
-        // Given
         ClaimValue presentString = ClaimValue.forPlainString(TEST_STRING);
         ClaimValue nullString = ClaimValue.forPlainString(null);
 
@@ -157,31 +146,24 @@ class ClaimValueTest {
         ClaimValue nullDateTime = ClaimValue.forDateTime(null, null);
         ClaimValue nonNullDateTime = ClaimValue.forDateTime("original", TEST_DATE);
 
-        // When, Then
-        // If originalString is present and it's a STRING type, it's present for its type
         assertFalse(presentString.isNotPresentForClaimValueType());
-
-        // For null originalString, it's not present for any type
-        assertTrue(nullString.isNotPresentForClaimValueType()); // STRING type returns true when originalString is null
-
-        assertFalse(nonEmptySetValue.isNotPresentForClaimValueType()); // Non-empty set converted to list returns false
-
-        assertTrue(emptyListValue.isNotPresentForClaimValueType()); // Empty list returns true
-        assertFalse(nonEmptyListValue.isNotPresentForClaimValueType()); // Non-empty list returns false
-
-        assertTrue(nullDateTime.isNotPresentForClaimValueType()); // Null datetime returns true
-        assertFalse(nonNullDateTime.isNotPresentForClaimValueType()); // Non-null datetime returns false
+        assertTrue(nullString.isNotPresentForClaimValueType());
+        assertFalse(nonEmptySetValue.isNotPresentForClaimValueType());
+        assertTrue(emptyListValue.isNotPresentForClaimValueType());
+        assertFalse(nonEmptyListValue.isNotPresentForClaimValueType());
+        assertTrue(nullDateTime.isNotPresentForClaimValueType());
+        assertFalse(nonNullDateTime.isNotPresentForClaimValueType());
     }
 
     @Test
-    @DisplayName("Should throw NullPointerException for null claim value type")
+    @DisplayName("Throw NullPointerException for null claim value type")
     void shouldThrowExceptionForNullType() {
-        // Given
-        ClaimValueType nullType = null;
+        assertThrows(NullPointerException.class, () -> ClaimValue.createEmptyClaimValue(null),
+                "Should throw NullPointerException when null is passed to createEmptyClaimValue");
+    }
 
-        // When, Then
-        assertThrows(NullPointerException.class, () -> {
-            ClaimValue.createEmptyClaimValue(nullType);
-        }, "Should throw NullPointerException when null is passed to createEmptyClaimValue");
+    @Override
+    public ClaimValue getUnderTest() {
+        return ClaimValue.forPlainString("test-value");
     }
 }
